# sum-eternal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: c01_first_blood.md  c02_knee_deep_in_the_indices.md  c03_the_slaughter_batch.md  c04_rip_and_trace.md  c05_total_intersection.md  c05_total_intersection_continued.md  c06_infernal_projection.md  c07_spooky_action_at_a_distance.md  c08_the_icon_of_ein.md  c09_nightmare_mode.md  overview.md
assets/: .gitkeep
docs/: decisions.md  orchestration.md  overview.md
docs/modules/: bridge.md  engine_game.md  engine_hot_reload.md  engine_renderer.md  main.md
solutions/: __init__.py  c01_first_blood.py  c02_knee_deep_in_the_indices.py  c03_the_slaughter_batch.py  c04_rip_and_trace.py  c05_total_intersection.py  c06_infernal_projection.py  c07_spooky_action_at_a_distance.py  c08_the_icon_of_ein.py  c09_nightmare_mode.py  test_cases.py
src/sum_eternal/: __init__.py  bridge.py  main.py
src/sum_eternal/engine/: __init__.py  assets.py  game.py  hot_reload.py  map.py  renderer.py
src/sum_eternal/states/: __init__.py
tests/: __init__.py  conftest.py  test_all.py  test_c01_first_blood.py  test_c02_knee_deep_in_the_indices.py  test_c03_the_slaughter_batch.py  test_c04_rip_and_trace.py  test_c05_total_intersection.py  test_c06_infernal_projection.py  test_c07_spooky_action_at_a_distance.py  test_c08_the_icon_of_ein.py  test_c09_nightmare_mode.py
